Update and rename quiz_eigrp.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuestionario: Protocolo EIGRP</title>
-    <link rel="stylesheet" href="styles_eigrp.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="quiz-container">
@@ -13,6 +13,6 @@
             </div>
         <button id="reset-button">Reiniciar Cuestionario</button>
     </div>
-    <script src="script_eigrp.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
